--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -89,6 +89,7 @@
         <div class="flex flex-col gap-4 pt-4">
           <!-- Google Sign In -->
           <a
+            *ngIf="!disableRegistration"
             [href]="googleAuthUrl"
             class="w-full bg-white border border-slate-200 text-slate-700 hover:bg-slate-50 py-3.5 rounded-2xl font-bold transition-all flex items-center justify-center gap-3 group"
           >
@@ -100,7 +101,10 @@
             <span>{{ UILabels.LOGIN.GOOGLE_LOGIN_BUTTON }}</span>
           </a>
 
-          <div class="h-px bg-slate-100 w-full"></div>
+          <div
+            *ngIf="!disableRegistration"
+            class="h-px bg-slate-100 w-full"
+          ></div>
 
           <button
             type="button"
@@ -110,9 +114,13 @@
             {{ UILabels.LOGIN.FORGOT_PASSWORD_LINK }}
           </button>
 
-          <div class="h-px bg-slate-100 w-full"></div>
+          <div
+            *ngIf="!disableRegistration"
+            class="h-px bg-slate-100 w-full"
+          ></div>
 
           <button
+            *ngIf="!disableRegistration"
             type="button"
             (click)="register()"
             class="text-sm font-bold text-slate-500 hover:text-slate-700 transition-colors"
